<resources>
    <string name="app_name">Pizuicas</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_item_list">Items List</string>

    <string name="welcome">Welcome to Pizuicas</string>

    <string name="shop_url">pizuicas.myshopify.com</string>
    <string name="shopify_api_key">fdb3d8fa24da5f0ea3f2870afa61e1f1</string>
    <string name="channel_id">46924166</string>

    <!-- UI -->
    <string name="please_wait">Please wait</string>
    <string name="loading_data">Loading data from store...</string>
    <string name="syncing_data">Syncing data with Checkout API...</string>
    <string name="error">Error! See logcat for details.</string>
    <string name="shop_error">Error! Could not load shop</string>

    <string name="product_to_cart">Product added to cart</string>

    <string name="choose_collection">Choose Collection</string>
    <string name="all_products">All Products</string>

    <string name="choose_product">Choose Product</string>
    <string name="demo_product_details_activity">Demo ProductDetailsActivity</string>
    <string name="theme_style">Theme Style</string>
    <string name="shows_product_image_bg">Shows Product Image BG</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="dark">DARK</string>
    <string name="light">LIGHT</string>
    <string name="choose_accent_color">Choose Accent Color</string>

    <string name="choose_shipping_rate">Choose Shipping Rate</string>
    <string name="no_shipping_rates">Product can\'t be shipped to your address.</string>

    <string name="apply_discounts">Apply Discounts</string>
    <string name="apply_discount">Apply Discount</string>
    <string name="apply_gift_card">Apply Gift Card</string>
    <string name="enter_discount_code">Enter Discount Code</string>
    <string name="enter_gift_card_code">Enter Gift Card Code</string>
    <string name="discount_code">Discount Code</string>
    <string name="gift_card_code">Gift Card Code</string>
    <string name="checkout">Checkout</string>
    <string name="cart">Cart</string>
    <string name="discount_error">Could not apply discount code %s</string>
    <string name="gift_card_error">Could not apply gift card code %s</string>

    <string name="native_checkout">Checkout with Fake Credit Card</string>
    <string name="web_checkout">Web Checkout</string>
    <string name="completing_checkout">Completing checkout...</string>
    <string name="getting_checkout_status">Getting checkout status...</string>
    <string name="checkout_complete">Checkout complete!</string>
    <string name="checkout_error">Could not complete checkout</string>

    <string name="no_product_selected">You need to select a product</string>

    <string name="line_item_price">Line Item Price</string>
    <string name="discount">Discount</string>
    <string name="gift_card">Gift Card</string>
    <string name="shipping">Shipping</string>
    <string name="taxes">Taxes</string>
    <string name="total">Total</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>

    <!-- Custom URL Scheme -->
    <string name="web_return_to_scheme">pizuicas</string>
    <string name="web_return_to_url">pizuicas://shop</string>
    <string name="web_return_to_label">Return to Pizuicas Android App</string>
    <string name="title_activity_cart">CartActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_checkout_information">CheckoutInformationActivity</string>

    <string name="action_settings">Settings</string>

    <string name="image_transition">image_transition</string>

    <!-- Form hints -->
    <string name="reg_form_name">First name</string>
    <string name="reg_form_last_name">Last name</string>
    <string name="reg_form_address">Address</string>
    <string name="reg_form_city">City</string>
    <string name="reg_form_province">Province</string>
    <string name="reg_form_zip">Zip</string>
    <string name="reg_form_country_code">Country Code</string>
    <string name="reg_form_email">Email</string>

    <!-- Form errors -->
    <string name="err_msg_name">Enter your name</string>
    <string name="err_msg_last_name">Enter your last name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_address">Enter your address</string>
    <string name="err_msg_city">Enter your city</string>
    <string name="err_msg_province">Enter your province</string>
    <string name="err_msg_zip">Enter your zip code</string>
    <string name="err_msg_country">Enter your country code</string>

    <!-- Custom values -->
    <string name="costa_rica_code">CR</string>
    <string name="default_currency">CRC</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <!-- Share values -->
    <string name="share_invitation" formatted="false">Check out this original 3d printed design named %s created by %s! You can check more in pizuicas.com! \n This is the item\'s story: \n %s</string>

</resources>
